# talks

beautiful-folds/: Makefile  README.md  beautiful-folds.cabal  report-1.html  report-2.html  report-3-O2.html  report-3.html  report-4-fixed-types-O2.html  report-5-compare-monoid-O2.html  report-5-compare-monoid.html  report-6-compare-monoid-1e6-O2.html  report-7-averagePAR-N2.html  report-7-averagePAR-N4.html  report-7-averagePAR-O2.html  slides.html  slides.md
beautiful-folds/app/: Main.hs
beautiful-folds/bench/: Bench.hs
beautiful-folds/src/: Folds.hs  Main.hs
