name:                beautiful-folds
version:             0.1.0.0
synopsis:            code for a beautiful folds talk
description:         This package contains different implementations of so-called beautiful folds and benchmarks comparing their performance.
homepage:            https://github.com/mheinzel/talks
license:             BSD3
license-file:        LICENSE
author:              Matthias Heinzel
maintainer:          mheinzel@posteo.de
copyright:           2016 Matthias Heinzel
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Folds
  build-depends:       base >= 4.7 && < 5
  ghc-options:         -Wall -O2
  default-language:    Haskell2010

test-suite beautiful-folds-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , beautiful-folds
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark beautiful-folds-bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Bench.hs
  build-depends:       base
                     , beautiful-folds
                     , criterion
  ghc-options:         -O2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mheinzel/beautiful-folds
