name:                beautiful-folds
version:             0.1.0.0
synopsis:            Slides and code about Beautiful Folds
description:         Slides and code for a short talk on Beautiful Folds, given at the Berlin Haskell Usergs Group meetup on September 20, 2017.
homepage:            https://github.com/mheinzel/talks
license:             BSD3
license-file:        LICENSE
author:              Matthias Heinzel
maintainer:          mheinzel@posteo.de
copyright:           2017 Matthias Heinzel
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable fold
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , split
                     , parallel
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-s -O2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mheinzel/talks
